<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:showAsAction="always|collapseActionView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_menu_friendslist"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_account"/>
    <item
        android:id="@+id/action_reserves"
        android:icon="@drawable/ac_senha"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/action_reserves"/>
    <item
        android:id="@+id/action_update"
        android:actionViewClass="android.widget.ProgressBar"
        android:icon="@android:drawable/ic_menu_set_as"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_update"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>